--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,21 @@ strong {
     text-decoration: underline;
 }
 
+.article-info {
+    margin: 2em 0;
+}
+
+.widget-title,
+.widget-recent-post-title {
+    font-size: 1rem;
+
+}
+
+.widget-title {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+}
+
 
 /* ==========
 layout
@@ -102,6 +117,13 @@ header {
 
 }
 
+footer {
+    background: #143774;
+    padding: 2em 0;
+    text-align: center;
+    color: white;
+}
+
 @media (min-width: 710px) {
     .container-flex {
         flex-direction: row;
@@ -116,7 +138,7 @@ header {
         max-width: 200px;
         margin-left: 1em;
     }
-    
+
 }
 
 
@@ -224,7 +246,7 @@ nav a:focus {
 
     .article-image {
         order: -2;
-         width: 100%;
+        width: 100%;
         min-height: 250px;
         object-fit: cover;
     }
@@ -233,11 +255,29 @@ nav a:focus {
         order: -1;
     }
 
-   
+
 }
+
+/* widget */
 
 .sidebar-widget {
     border: 20px solid #efefef;
     padding: 1em;
     margin-bottom: 2em;
+}
+
+.widget-recent-post {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #707070;
+    margin-bottom: 1em;
+}
+
+.widget-image {
+    order: -1;
+}
+
+.widget-recent-post:last-child {
+    margin: 0;
+    border: 0;
 }
