--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,16 @@ img {
     display: block;
 }
 
+/* about-me page */
+
+.image-full {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    margin-bottom: 2em;
+
+}
+
 /* ==========
 typography
    ========== */
@@ -30,6 +40,10 @@ h1 {
 
     font-size: 2rem;
     margin: 0;
+}
+
+h3 {
+    color: #1792d2;
 }
 
 a {
@@ -85,6 +99,10 @@ strong {
 
 }
 
+.widget-recent-post-title {
+    color: #143774;
+}
+
 .widget-title {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
@@ -124,7 +142,7 @@ footer {
     color: white;
 }
 
-@media (min-width: 710px) {
+@media (min-width: 675px) {
     .container-flex {
         flex-direction: row;
     }
@@ -178,7 +196,7 @@ nav a:focus {
     color: #707070;
 }
 
-@media (max-width: 710px) {
+@media (max-width: 675px) {
     nav ul {
         flex-direction: column;
     }
@@ -224,7 +242,7 @@ nav a:focus {
     
 } */
 
-@media (min-width: 710px) {
+@media (min-width: 675px) {
     .article-recent {
         flex-direction: row;
         justify-content: space-between;
@@ -281,3 +299,4 @@ nav a:focus {
     margin: 0;
     border: 0;
 }
+
