--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.125rem;
     font-weight: 300;
+    line-height: 1.6;
 
 }
 
@@ -66,6 +67,7 @@ strong {
     font-size: .75rem;
     color: #1792d2;
     margin: 0;
+    text-transform: uppercase;
 }
 
 .article-title {
@@ -81,6 +83,8 @@ strong {
     color: #1792d2;
     font-weight: 700;
     text-decoration: none;
+    /* text-transform: lowercase; */
+    letter-spacing: 1px;
 }
 
 .article-read-more:hover,
@@ -96,6 +100,7 @@ strong {
 .widget-title,
 .widget-recent-post-title {
     font-size: 1rem;
+    line-height: 1.2;
 
 }
 
@@ -106,6 +111,8 @@ strong {
 .widget-title {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 
@@ -136,10 +143,12 @@ header {
 }
 
 footer {
-    background: #143774;
+    background: #345480;
+    color: rgba(255, 255, 255, .65);
+
     padding: 2em 0;
     text-align: center;
-    color: white;
+
 }
 
 @media (min-width: 675px) {
@@ -181,6 +190,8 @@ nav a {
     color: #707070;
     font-weight: 700;
     padding: .25em 0;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 nav a:hover,
@@ -299,4 +310,3 @@ nav a:focus {
     margin: 0;
     border: 0;
 }
-
